// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ManageParticipantsDialog (snapshots) > renders a list of approved guests sorted by approvedAt desc 1`] = `
<div
  class="modal-panel relative w-full max-w-lg max-h-[90vh] overflow-y-auto rounded-xl bg-white p-6 shadow-xl dark:bg-neutral-900"
>
  <button
    aria-label="Close dialog"
    class="absolute right-4 top-4 rounded-md p-1 text-neutral-400 transition-colors hover:bg-neutral-100 hover:text-neutral-600 focus-visible:ring-2 focus-visible:ring-neutral-400 dark:text-neutral-500 dark:hover:bg-neutral-800 dark:hover:text-neutral-300"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
  <div
    class="space-y-5"
  >
    <div>
      <h2
        class="text-lg font-semibold"
      >
        Participants
      </h2>
      <p
        class="mt-1 text-sm text-neutral-600 dark:text-neutral-400"
      >
        Guests you've approved this session. Revoking removes the auto-approve; they'll be prompted again next time. It does not disconnect anyone currently connected.
      </p>
    </div>
    <ul
      class="divide-y divide-neutral-200 rounded-md border border-neutral-200 dark:divide-neutral-800 dark:border-neutral-800"
    >
      <li
        class="flex items-center gap-3 px-3 py-2 text-sm"
      >
        <span
          aria-hidden="true"
          class="inline-block h-5 w-5 flex-none rounded-full"
          style="background-color: rgb(51, 102, 204);"
        />
        <span
          class="flex-1 truncate font-medium"
        >
          Bob
        </span>
        <button
          class="rounded-md border border-neutral-300 px-2 py-1 text-xs text-neutral-700 hover:bg-neutral-100 dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800"
          type="button"
        >
          Revoke
        </button>
      </li>
      <li
        class="flex items-center gap-3 px-3 py-2 text-sm"
      >
        <span
          aria-hidden="true"
          class="inline-block h-5 w-5 flex-none rounded-full"
          style="background-color: rgb(204, 102, 153);"
        />
        <span
          class="flex-1 truncate font-medium"
        >
          Alice
        </span>
        <button
          class="rounded-md border border-neutral-300 px-2 py-1 text-xs text-neutral-700 hover:bg-neutral-100 dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800"
          type="button"
        >
          Revoke
        </button>
      </li>
    </ul>
    <div
      class="flex justify-end pt-2"
    >
      <button
        class="rounded-md px-4 py-2 text-sm font-medium text-neutral-700 transition-colors hover:bg-neutral-100 dark:text-neutral-300 dark:hover:bg-neutral-800"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ManageParticipantsDialog (snapshots) > renders empty-state when no guests are approved 1`] = `
<div
  class="modal-panel relative w-full max-w-lg max-h-[90vh] overflow-y-auto rounded-xl bg-white p-6 shadow-xl dark:bg-neutral-900"
>
  <button
    aria-label="Close dialog"
    class="absolute right-4 top-4 rounded-md p-1 text-neutral-400 transition-colors hover:bg-neutral-100 hover:text-neutral-600 focus-visible:ring-2 focus-visible:ring-neutral-400 dark:text-neutral-500 dark:hover:bg-neutral-800 dark:hover:text-neutral-300"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
  <div
    class="space-y-5"
  >
    <div>
      <h2
        class="text-lg font-semibold"
      >
        Participants
      </h2>
      <p
        class="mt-1 text-sm text-neutral-600 dark:text-neutral-400"
      >
        Guests you've approved this session. Revoking removes the auto-approve; they'll be prompted again next time. It does not disconnect anyone currently connected.
      </p>
    </div>
    <p
      class="rounded-md border border-dashed border-neutral-300 px-3 py-6 text-center text-sm text-neutral-600 dark:border-neutral-700 dark:text-neutral-400"
    >
      No approved guests yet.
    </p>
    <div
      class="flex justify-end pt-2"
    >
      <button
        class="rounded-md px-4 py-2 text-sm font-medium text-neutral-700 transition-colors hover:bg-neutral-100 dark:text-neutral-300 dark:hover:bg-neutral-800"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`ManageParticipantsDialog (snapshots) > shows a 'waiting to join' shortcut when there's a pending request 1`] = `
<div
  class="modal-panel relative w-full max-w-lg max-h-[90vh] overflow-y-auto rounded-xl bg-white p-6 shadow-xl dark:bg-neutral-900"
>
  <button
    aria-label="Close dialog"
    class="absolute right-4 top-4 rounded-md p-1 text-neutral-400 transition-colors hover:bg-neutral-100 hover:text-neutral-600 focus-visible:ring-2 focus-visible:ring-neutral-400 dark:text-neutral-500 dark:hover:bg-neutral-800 dark:hover:text-neutral-300"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
  <div
    class="space-y-5"
  >
    <div>
      <h2
        class="text-lg font-semibold"
      >
        Participants
      </h2>
      <p
        class="mt-1 text-sm text-neutral-600 dark:text-neutral-400"
      >
        Guests you've approved this session. Revoking removes the auto-approve; they'll be prompted again next time. It does not disconnect anyone currently connected.
      </p>
    </div>
    <button
      class="flex w-full items-center gap-3 rounded-md border border-amber-200 bg-amber-50 px-3 py-2 text-left text-sm hover:bg-amber-100 dark:border-amber-900/60 dark:bg-amber-950/30 dark:hover:bg-amber-950/60"
      type="button"
    >
      <span
        aria-hidden="true"
        class="inline-block h-5 w-5 rounded-full"
        style="background-color: rgb(255, 0, 0);"
      />
      <span
        class="font-medium"
      >
        Eve
      </span>
      <span
        class="text-amber-700 dark:text-amber-300"
      >
        waiting to join
      </span>
    </button>
    <p
      class="rounded-md border border-dashed border-neutral-300 px-3 py-6 text-center text-sm text-neutral-600 dark:border-neutral-700 dark:text-neutral-400"
    >
      No approved guests yet.
    </p>
    <div
      class="flex justify-end pt-2"
    >
      <button
        class="rounded-md px-4 py-2 text-sm font-medium text-neutral-700 transition-colors hover:bg-neutral-100 dark:text-neutral-300 dark:hover:bg-neutral-800"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;
